--- a/public/css/recipies-styles.css
+++ b/public/css/recipies-styles.css
@@ -12,11 +12,18 @@
   background: var(--buttonHover);
 }
 
+h1 {
+  text-align: center;
+}
+
 .meals-wrapper {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 250px));
-  grid-gap: 2em;
-  padding: 1em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 75%;
+  margin: 0 auto;
+  /* grid-template-columns: repeat(auto-fit, minmax(200px, 250px)); */
+  /* grid-gap: 2em; */
 }
 
 /* Meal Container */
@@ -26,6 +33,8 @@
   background: var(--primary);
   box-shadow: var(--shadow);
   border-radius: 3px;
+  max-width: 250px;
+  margin: 1rem;
 }
 
 .meal-container picture {
